tests/ui/type-alias-impl-trait/issue-77179.stderr
error[E0121]: the placeholder `_` is not allowed within types on item signatures for return types
  --> $DIR/issue-77179.rs:7:22
   |
LL | fn test() -> Pointer<_> {
   |              --------^-
   |              |       |
   |              |       not allowed in type signatures
   |              help: replace with the correct return type: `Pointer<i32>`

error[E0792]: non-defining opaque type use in defining scope
  --> $DIR/issue-77179.rs:7:14
   |
LL | fn test() -> Pointer<_> {
   |              ^^^^^^^^^^ argument `i32` is not a generic parameter
   |
note: for this opaque type
  --> $DIR/issue-77179.rs:5:19
   |
LL | type Pointer<T> = impl std::ops::Deref<Target = T>;
   |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0792]: expected generic type parameter, found `i32`
  --> $DIR/issue-77179.rs:10:5
   |
LL | type Pointer<T> = impl std::ops::Deref<Target = T>;
   |              - this generic parameter must be used with a generic type parameter
...
LL |     Box::new(1)
   |     ^^^^^^^^^^^

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0121, E0792.
For more information about an error, try `rustc --explain E0121`.
